--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,33 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": true,
-    "declaration": true,
-    "strict": true,
-    "target": "ES2020",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "lib": [
-      "ES6",
-      "ES2019",
-      "ES2017",
-      "ES2020"
+    "compilerOptions": {
+      "target": "ES2022",
+      "module": "commonjs",
+      "lib": ["ESNext"],
+      "outDir": "./dist",
+      "rootDir": "./src",
+      "moduleResolution": "Node",
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "strict": true,
+      "noImplicitAny": true,
+      "strictNullChecks": true,
+      "strictFunctionTypes": true,
+      "strictBindCallApply": true,
+      "strictPropertyInitialization": true,
+      "noImplicitThis": true,
+      "alwaysStrict": true,
+      "removeComments": false,
+      "declaration": true,
+      "sourceMap": true,
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true
+    },
+    "exclude": [
+      "node_modules",
+      "**/*.spec.ts",
+      "dist"
     ],
-    "outDir": "./dist"
-  },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts",
-    "dist"
-  ]
-}
+    "include": [
+      "./src/**/*"
+    ]
+  }
