--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whmcs-sdk",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A comprehensive and easy-to-use Node SDK, designed to simplify interactions with the WHMCS API and streamline your development process.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -11,8 +11,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "docs": "typedoc",
-    "test": "mocha test/**/*.test.mjs"
+    "docs": "typedoc"
   },
   "repository": {
     "type": "git",
@@ -25,22 +24,13 @@
     "wrapper",
     "nodejs"
   ],
-  "engines": {
-    "node": ">=20.0.0"
-  },
   "dependencies": {
-    "axios": "^1.7.7",
-    "bluebird": "^3.7.2",
-    "chai": "^5.1.2",
-    "https-proxy-agent": "^5.0.0",
-    "mocha": "^10.8.2",
-    "xml2js": "^0.6.2"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
-    "@types/axios": "^0.14.4",
-    "@types/bluebird": "^3.5.42",
-    "@types/xml2js": "^0.4.14",
+    "@types/request": "^2.48.12",
+    "nodemon": "^3.1.7",
     "typedoc": "^0.26.11",
     "typescript": "^5.6.3"
   }
