--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whmcs-sdk",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A comprehensive and easy-to-use Node SDK, designed to simplify interactions with the WHMCS API and streamline your development process.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -10,8 +10,10 @@
   ],
   "scripts": {
     "build": "tsc",
-    "docs": "typedoc"
+    "docs": "typedoc",
+    "test:getServers": "node ./test/get.test.js"
   },
+  "homepage": "https://nodebytehosting.github.io/whmcs-sdk/",
   "repository": {
     "type": "git",
     "url": "https://github.com/NodeByteHosting/whmcs-sdk.git"
